@@ -1,3 +1,14 @@
+2013-11-12  Julien Brianceau  <jbriance@cisco.com>
+
+        [sh4] Fix load32WithUnalignedHalfWords function in baseline JIT.
+        https://bugs.webkit.org/show_bug.cgi?id=124233
+
+        Reviewed by Michael Saboff.
+
+        * assembler/MacroAssemblerSH4.h:
+        (JSC::MacroAssemblerSH4::load32WithUnalignedHalfWords): Do not claim scratch register too early.
+        Test already covered by fast/regex/pcre-test-1.
+
 2013-11-12  Filip Pizlo  <fpizlo@apple.com>
 
         Liveness analysis should take less memory in CodeBlock when it is unused
